Look for GHC above 8.0 as well
GHC 8.2.2 also looks to be compatible

--- a/src/Makefile
+++ b/src/Makefile
@@ -32,7 +32,7 @@ VS_ML      := codegen/AsyncFS.ml
 VS_JSON    := codegen/AsyncFS.json
 GHC 	   := ghc
 HSC2HS	   := hsc2hs
-ifeq (,$(shell $(GHC) --version 2>/dev/null | grep 'version 8.0' 2>/dev/null))
+ifeq (,$(shell $(GHC) --version 2>/dev/null | grep 'version 8\.' 2>/dev/null))
 	GHC := /opt/ghc/8.0.1/bin/ghc
 	HSC2HS := /opt/ghc/8.0.1/bin/hsc2hs
 endif
