--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 OCAMLBUILD := env OCAMLPATH=$(shell pwd) ocamlbuild \
 	      -tag thread -tag debug -use-ocamlfind \
 	      -lib str -lib nums \
-	      -I codegen -I mllib -X ocamlfuse \
+	      -I codegen -I mllib \
 	      -package extunix -package zarith -package ocamlfuse
 MODULES    := Lock Nomega Word WordAuto WordZ Bytes Rounding \
 				Mem AsyncDisk Pred Prog ProgMonad PredCrash Hoare \
@@ -46,53 +46,12 @@ HSLIB_FUSE := hscgen/Fuse.hs hslib/libopfuse.a
 HSLIB_PRE  := hslib/Word.hs hslib/Evict.hs hslib/Profile.hs
 HSLIB_POST := hslib/Disk.hs hslib/Interpreter.hs
 
-OCAMLFUSE_ML	:= ocamlfuse/Result.ml \
-		   ocamlfuse/Unix_util.ml \
-		   ocamlfuse/Fuse_bindings.ml \
-		   ocamlfuse/Fuse_lib.ml \
-		   ocamlfuse/Fuse.ml
-OCAMLFUSE_MLI	:= ocamlfuse/Fuse.mli \
-		   ocamlfuse/Fuse_bindings.mli
-
-OCAMLFUSE_CMX	:= $(patsubst %.ml,%.cmx,$(OCAMLFUSE_ML))
-OCAMLFUSE_DEP	:= $(patsubst %.ml,%.d,$(OCAMLFUSE_ML)) \
-		   $(patsubst %.mli,%.di,$(OCAMLFUSE_MLI))
-OCAMLFUSE	:= ocamlfuse/Fuse.a ocamlfuse/Fuse.cmxa
-
 .PHONY: coq proof clean
 
 all: fscq mkfs
 
--include $(OCAMLFUSE_DEP)
-
-%.mli %.ml %_stubs.c: %.idl
-	camlidl -header $<
-
-%.d: %.ml
-	ocamldep $< > $@
-
-%.di: %.mli
-	ocamldep $< > $@
-
-ocamlfuse/%.o: ocamlfuse/%.c
-	ocamlc -c -ccopt '-fPIC -D_FILE_OFFSET_BITS=64 -I. -pthread -DPIC -DNATIVE_CODE -o $@' $<
-
-ocamlfuse/libFuse_stubs.a: ocamlfuse/Fuse_bindings_stubs.o ocamlfuse/Unix_util_stubs.o ocamlfuse/Fuse_util.o
-	ar rcs $@ $^
-
-%.cmx: %.ml
-	ocamlopt -I ocamlfuse -c -thread $<
-
-%.cmi: %.mli
-	ocamlopt -I ocamlfuse -c -thread $<
-
-ocamlfuse/Fuse.cmxa ocamlfuse/Fuse.a: $(OCAMLFUSE_CMX) ocamlfuse/libFuse_stubs.a
-	ocamlopt -a -thread -linkall -cclib -lFuse_stubs -cclib -lfuse -cclib -lcamlidl -o $@ $(OCAMLFUSE_CMX)
-
-%: %.ml $(VS_ML) $(wildcard */*.ml) $(OCAMLFUSE)
+%: %.ml $(VS_ML) $(wildcard */*.ml)
 	rm -f $@
-	-mv codegen/Word.ml codegen/WordCoq.ml
-	-mv codegen/Word.mli codegen/WordCoq.mli
 	$(OCAMLBUILD) -no-links $@.native
 	ln -s $(CURDIR)/_build/$@.native $@
 
@@ -113,13 +72,14 @@ $(VS_HS): $(VS_VIO) coqbuild/ExtractHaskell.v
 
 $(VS_ML): $(VS_VIO) coqbuild/ExtractOcaml.v
 	( cd coqbuild && coqc -q -R . Fscq ExtractOcaml.v )
+	mv codegen/Word.ml codegen/.WordCoq.ml
+	mv codegen/Word.mli codegen/.WordCoq.mli
 
 $(VS_JSON): $(VS_VIO) coqbuild/ExtractJSON.v
 	( cd coqbuild && coqc -q -R . Fscq ExtractJSON.v )
 
 $(VS_VIO): coqbuild/Makefile.coq
-	( cd coqbuild && $(MAKE) -j $(J) -f Makefile.coq quick )
-	@touch coqbuild/*.vio
+	( cd coqbuild && $(MAKE) -j $(J) -f Makefile.coq vio )
 
 checkproofs: coqbuild/Makefile.coq
 	( cd coqbuild && $(MAKE) -f Makefile.coq checkproofs J=$(J) )
@@ -157,10 +117,7 @@ hslib/libopfuse.a: hslib/opqueue.o hslib/opfuse.o
 
 clean:
 	rm -rf codegen coqbuild _build fstest hstest gotest disk.img \
-	       fscq mkfs *.o *.hi ocamlfuse/*.d ocamlfuse/*.di \
-	       ocamlfuse/*.cmi ocamlfuse/*.cmx ocamlfuse/*.cmo \
-	       ocamlfuse/*.o ocamlfuse/Fuse_bindings_stubs.c \
-	       ocamlfuse/Fuse_bindings.h ocamlfuse/Fuse_bindings.ml \
-	       ocamlfuse/libFuse_stubs.a hslib/*.o hscgen
+	       fscq mkfs *.o *.hi \
+	       hslib/*.o hscgen
 
 .PRECIOUS: hscgen/%.hs %_stubs.c
