--- a/src/mlbin/dune
+++ b/src/mlbin/dune
@@ -1,9 +1,13 @@
 (executable
  (name mkfs)
  (libraries fscq zarith)
- (modules mkfs))
+ (modules mkfs)
+ (promote (until-clean))
+)
 
 (executable
  (name fscqfuse)
  (libraries fscq fuse fpath)
- (modules fscqfuse))
+ (modules fscqfuse)
+ (promote (until-clean))
+)
